lib/src/audio/snapshots/lib__audio__html__tests__snapshot_file_reference_mode.snap
---
source: src/audio/html.rs
assertion_line: 486
expression: html
---
<div class="audio-player">
  <audio controls preload="metadata">
    <source src="audio/abc123def456.mp3" type="audio/mpeg">
    Your browser does not support the audio element.
  </audio>
  <div class="audio-info">
    <span class="audio-name">Test Track</span>
    <span class="audio-duration">2:05</span>
  </div>
</div>
