lib/src/audio/snapshots/lib__audio__html__tests__snapshot_inline_mode.snap
---
source: src/audio/html.rs
assertion_line: 513
expression: html
---
<div class="audio-player">
  <audio controls preload="metadata">
    <source src="data:audio/wav;base64,VGVzdEJhc2U2NERhdGE=" type="audio/wav">
    Your browser does not support the audio element.
  </audio>
  <div class="audio-info">
    <span class="audio-name">Short Sound Effect</span>
    <span class="audio-duration">0:03</span>
  </div>
</div>
